Bug 202741 - [regression][patch] ranlib's deterministic mode broken since r286024
Summary: [regression][patch] ranlib's deterministic mode broken since r286024
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: bin (show other bugs)
Version: CURRENT
Hardware: Any Any
: --- Affects Some People
Assignee: Ed Maste
URL:
Keywords: patch, regression
Depends on:
Blocks:
 
Reported: 2015-08-29 10:02 UTC by Fabian Keil
Modified: 2015-08-31 19:56 UTC (History)
1 user (show)

See Also:


Attachments
usr.bin/ar: Fix deterministic mode when running as ranlib (846 bytes, patch)
2015-08-29 10:04 UTC, Fabian Keil
no flags Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Fabian Keil 2015-08-29 10:02:34 UTC
r286024 lets ranlib ignore the -D flag and default to non-deterministic mode as the chunk that sets AR_D is only reached when running as ar.

The attached patch is one way to fix this. Obtained from ElectroBSD.
Comment 1 Fabian Keil 2015-08-29 10:04:44 UTC
Created attachment 160479 [details]
usr.bin/ar: Fix deterministic mode when running as ranlib
Comment 2 commit-hook freebsd_committer freebsd_triage 2015-08-31 12:29:08 UTC
A commit references this bug:

Author: emaste
Date: Mon Aug 31 12:28:14 UTC 2015
New revision: 287324
URL: https://svnweb.freebsd.org/changeset/base/287324

Log:
  ar: fix deterministic mode when running as ranlib

  This was broken by r286024.

  PR:		202741
  Submitted by:	fk@fabiankeil.de
  Obtained from:	ElectroBSD

Changes:
  head/usr.bin/ar/ar.c
Comment 3 Ed Maste freebsd_committer freebsd_triage 2015-08-31 19:56:55 UTC
I intend to MFC the change to enable deterministic mode by default, and will include this fix.