ar: fix deterministic mode when running as ranlib

This was broken by r286024.

PR:		202741
Submitted by:	fk@fabiankeil.de
Obtained from:	ElectroBSD

Former-commit-id: 4c1ddf73ef5f53c467e9d19112413ca93d683e39